change order of project items; fixing contact section on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
 :root {
   --primary-color: #000;
   --secondary-color: #fff;
+  --third-color: rgb(160, 160, 160);
 }
 
 * {
@@ -221,6 +222,7 @@ canvas {
   justify-content: center;
   width: 100%;
   flex-wrap: wrap;
+  padding-bottom: 1em;
 }
 
 .contact-head {
@@ -237,15 +239,13 @@ canvas {
   line-height: 1.4;
 }
 
-i {
-  color: rgb(160, 160, 160);
+.contact-section i {
+  color: var(--third-color);
   font-size: 3em;
-  padding: 0.2em 0.4em;
-  margin-top: 0.1em;
-  margin-bottom: 0.4em;
+  padding: 0.1em 0.4em;
 }
 
-i:hover {
+.contact-section i:hover {
   color: var(--primary-color);
 }
 
@@ -313,9 +313,6 @@ i:hover {
     margin-top: 1em;
     margin-bottom: 0.5em;
   }
-  i {
-    font-size: 2.4em;
-  }
   .contact-head {
     font-size: 1.6em;
     margin: 0.5em 0 0.2em 0;
@@ -325,6 +322,11 @@ i:hover {
     text-align: center;
     line-height: 1.3;
     padding: 1em 1em;
+  }
+  .contact-section i {
+    color: var(--primary-color);
+    font-size: 2.9em;
+    /* padding: 0.2em 0.4em; */
   }
 }
 
